# sago

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEMO.md  IMPLEMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  skylos.yml
docs/: AGENTS.md  AGENT_SYSTEM_SUMMARY.md  CONTEXT_COMPRESSION.md
examples/: agent_workflow_example.py  compression_example.py
src/sago/: __init__.py  cli.py  state.py
src/sago/agents/: __init__.py  base.py  dependencies.py  executor.py  orchestrator.py  planner.py  replanner.py  reviewer.py  self_healing.py  verifier.py
src/sago/blocker/: manager.py
src/sago/core/: config.py  parser.py  project.py
src/sago/models/: __init__.py  execution.py  plan.py  state.py
src/sago/recommendations/: __init__.py  engine.py
src/sago/templates/: CLAUDE.md  IMPORTANT.md  PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUMMARY.md
src/sago/utils/: __init__.py  cache.py  compression.py  cost_estimator.py  elevation.py  environment.py  git_integration.py  llm.py  paths.py  repo_map.py  syntax_check.py  tracer.py
src/sago/validation/: __init__.py  validator.py
src/sago/web/: dashboard.html  mission_control.html  server.py  watcher.py
tests/: conftest.py  test_agents.py  test_blocker.py  test_cache.py  test_cli.py  test_compression.py  test_config.py  test_cost_estimator.py  test_dashboard_server.py  test_dependencies.py  test_elevation.py  test_environment.py  test_git_integration.py  test_integration.py  test_llm.py  test_models.py  test_orchestrator.py  test_parser.py  test_path_safety.py  test_project.py  test_recommendations.py  test_replanner.py  test_reviewer.py  test_self_healing.py  test_state.py  test_tracer.py  test_validation_integration.py  test_validator.py  test_watcher.py
