[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sago"
version = "0.1.0"
description = "Claude Code Control Protocol - AI-powered project orchestration and productivity tool"
authors = [{name = "sago Contributors"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["ai", "productivity", "project-management", "cli", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "litellm>=1.30.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
compression = [
    "llmlingua>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "sago[dev,compression]",
]

[project.scripts]
sago = "sago.cli:app"

[project.urls]
Homepage = "https://github.com/sago-build/sago"
Documentation = "https://github.com/sago-build/sago#readme"
Repository = "https://github.com/sago-build/sago"
Issues = "https://github.com/sago-build/sago/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sago --cov-report=term-missing --cov-report=html"

# -- Skylos static analysis --------------------------------------------------
[tool.skylos]
complexity = 15
nesting = 4
max_args = 6
max_lines = 100
exclude = ["tests", "examples"]

[tool.skylos.gate]
# Remaining 21 quality findings are false positives from rule limitations:
# SKY-P403 nested loops on hierarchical data, SKY-C401 boilerplate clones,
# SKY-C303 CLI arg counts, SKY-L006 Optional returns, SKY-P401 small file reads.
fail_on_critical = true
max_critical = 0
max_high = 0
max_security = 0
max_quality = 25
strict = false

[tool.skylos.whitelist]
names = []

[tool.skylos.whitelist.documented]
"_failed_workflow" = "module-level helper used by Orchestrator.run_workflow"
"visualize_dependencies" = "public API for CLI/debugging use"
