[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sago"
version = "0.1.1"
description = "Spec-Aware Generation Orchestrator - turns markdown specs into working code"
authors = [{name = "oha"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["ai", "productivity", "project-management", "cli", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "litellm>=1.30.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
compression = [
    "llmlingua>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "sago[dev,compression]",
]

[project.scripts]
sago = "sago.cli:app"

[project.urls]
Homepage = "https://github.com/duriantaco/sago"
Documentation = "https://github.com/duriantaco/sago#readme"
Repository = "https://github.com/duriantaco/sago"
Issues = "https://github.com/duriantaco/sago/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP", # pyupgrade
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sago --cov-report=term-missing --cov-report=html"

[tool.skylos]
complexity = 15
nesting = 4
max_args = 6
max_lines = 100
exclude = ["tests", "examples"]

[tool.skylos.gate]
fail_on_critical = true
max_critical = 0
max_high = 0
max_security = 2  # 2 path-traversal false positives (paths are .resolve()'d)
max_quality = 30
strict = false

[tool.skylos.whitelist]
names = []

[tool.skylos.whitelist.documented]
"_failed_workflow" = "module-level helper used by Orchestrator.run_workflow"
"visualize_dependencies" = "public API for CLI/debugging use"
